--- a/Home_Sales_starter_code.ipynb
+++ b/Home_Sales_starter_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -19,11 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "2XbWNf1Te5fM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/05/06 14:57:43 WARN Utils: Your hostname, Caels-iMac.local resolves to a loopback address: 127.0.0.1; using 192.168.0.3 instead (on interface en1)\n",
+      "24/05/06 14:57:43 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/05/06 14:57:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "# Import packages\n",
     "from pyspark.sql import SparkSession\n",
@@ -35,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -43,29 +55,56 @@
     "id": "wOJqxG_RPSwp",
     "outputId": "7857ef9f-5b04-405d-f5aa-e535dfe7870c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/05/06 15:07:51 WARN SparkContext: The path https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv has been added already. Overwriting of added paths is not supported in the current version.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|                  id|      date|date_built| price|bedrooms|bathrooms|sqft_living|sqft_lot|floors|waterfront|view|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|f8a53099-ba1c-47d...|2022-04-08|      2016|936923|       4|        3|       3167|   11733|     2|         1|  76|\n",
+      "|7530a2d8-1ae3-451...|2021-06-13|      2013|379628|       2|        2|       2235|   14384|     1|         0|  23|\n",
+      "|43de979c-0bf0-4c9...|2019-04-12|      2014|417866|       2|        2|       2127|   10575|     2|         0|   0|\n",
+      "|b672c137-b88c-48b...|2019-10-16|      2016|239895|       2|        2|       1631|   11149|     2|         0|   0|\n",
+      "|e0726d4d-d595-407...|2022-01-08|      2017|424418|       3|        2|       2249|   13878|     2|         0|   4|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Read in the AWS S3 bucket into a DataFrame.\n",
     "from pyspark import SparkFiles\n",
     "url = \"https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv\"\n",
-    "\n"
+    "spark.sparkContext.addFile(url)\n",
+    "df = spark.read.csv(SparkFiles.get(\"home_sales_revised.csv\"), sep=\",\", header=True)\n",
+    "df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
    "outputs": [],
    "source": [
     "# 2. Create a temporary view of the DataFrame.\n",
-    "\n"
+    "df.createOrReplaceTempView('home_sales')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -73,15 +112,41 @@
     "id": "L6fkwOeOmqvq",
     "outputId": "bdded620-79c4-488d-c7a5-91c6799c419e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|YEAR|AVERAGE_PRICE|\n",
+      "+----+-------------+\n",
+      "|2022|    296363.88|\n",
+      "|2021|    301819.44|\n",
+      "|2020|    298353.78|\n",
+      "|2019|     300263.7|\n",
+      "+----+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. What is the average price for a four bedroom house sold per year, rounded to two decimal places?\n",
-    "\n"
+    "four_bedroom_house_prices = spark.sql(\"\"\"\n",
+    "                                      SELECT\n",
+    "                                      YEAR(date) AS YEAR,\n",
+    "                                      ROUND(AVG(price), 2) AS AVERAGE_PRICE\n",
+    "                                      FROM home_sales\n",
+    "                                      WHERE bedrooms = 4\n",
+    "                                      GROUP BY YEAR\n",
+    "                                      ORDER BY YEAR DESC\n",
+    "                                      \"\"\")\n",
+    "\n",
+    "four_bedroom_house_prices.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -89,16 +154,42 @@
     "id": "l8p_tUS8h8it",
     "outputId": "65806e5f-6262-41c0-ff65-5107464e5c4d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|YEAR|AVERAGE_PRICE|\n",
+      "+----+-------------+\n",
+      "|2022|    296363.88|\n",
+      "|2021|    301819.44|\n",
+      "|2020|    298353.78|\n",
+      "|2019|     300263.7|\n",
+      "+----+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. What is the average price of a home for each year the home was built,\n",
     "# that have 3 bedrooms and 3 bathrooms, rounded to two decimal places?\n",
-    "\n"
+    "three_bed_three_bath = spark.sql(\"\"\"\n",
+    "                                 SELECT\n",
+    "                                 YEAR(date) AS YEAR,\n",
+    "                                 ROUND(AVG(price), 2) AS AVERAGE_PRICE\n",
+    "                                 FROM home_sales\n",
+    "                                 WHERE bedrooms = 4\n",
+    "                                 GROUP BY YEAR\n",
+    "                                 ORDER BY YEAR DESC\n",
+    "                                 \"\"\")\n",
+    "\n",
+    "three_bed_three_bath.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -106,17 +197,46 @@
     "id": "Y-Eytz64liDU",
     "outputId": "17119810-56ad-40c3-de5e-c3db57e43bcc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|YEAR|AVERAGE_PRICE|\n",
+      "+----+-------------+\n",
+      "|2022|    290242.99|\n",
+      "|2021|    296330.96|\n",
+      "|2020|    292289.09|\n",
+      "|2019|    289859.14|\n",
+      "+----+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. What is the average price of a home for each year the home was built,\n",
     "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
     "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
-    "\n"
+    "two_story_2000_SQFT = spark.sql(\"\"\"\n",
+    "                                SELECT\n",
+    "                                YEAR(date) AS YEAR,\n",
+    "                                ROUND(AVG(price), 2) AS AVERAGE_PRICE\n",
+    "                                FROM home_sales\n",
+    "                                WHERE bedrooms = 3\n",
+    "                                AND bathrooms = 3\n",
+    "                                AND sqft_living >= 2000\n",
+    "                                AND floors = 2\n",
+    "                                GROUP BY YEAR\n",
+    "                                ORDER BY YEAR DESC\n",
+    "                                 \"\"\")\n",
+    "\n",
+    "two_story_2000_SQFT.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -124,7 +244,26 @@
     "id": "GUrfgOX1pCRd",
     "outputId": "17c25774-855e-4290-a4bd-a04902bdc13a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|view|AVERAGE_PRICE|\n",
+      "+----+-------------+\n",
+      "|  99|   1061201.42|\n",
+      "|  98|   1053739.33|\n",
+      "|  97|   1129040.15|\n",
+      "|  96|   1017815.92|\n",
+      "|  95|    1054325.6|\n",
+      "+----+-------------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "--- 0.6397812366485596 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. What is the average price of a home per \"view\" rating, rounded to two decimal places,\n",
     "# having an average home price greater than or equal to $350,000? Order by descending view rating. \n",
@@ -132,6 +271,17 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
+    "view_rating = spark.sql(\"\"\"              \n",
+    "                        SELECT\n",
+    "                        view,\n",
+    "                        ROUND(AVG(price), 2) AS AVERAGE_PRICE\n",
+    "                        FROM home_sales\n",
+    "                        GROUP BY view\n",
+    "                        HAVING AVG(price) >= 350000\n",
+    "                        ORDER BY view desc\n",
+    "                        \"\"\")\n",
+    "\n",
+    "view_rating.show(5)\n",
     "\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
@@ -266,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -276,8 +426,7 @@
    },
    "outputs": [],
    "source": [
-    "# 15. Check if the home_sales is no longer cached\n",
-    "\n"
+    "# 15. Check if the home_sales is no longer cached\n"
    ]
   },
   {
@@ -309,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.3"
   },
   "nteract": {
    "version": "0.28.0"
